Updated blog section and Github portfolio link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="project-info">
           <h3>Portfolio Website</h3>
           <p>A personal website built using HTML and CSS to showcase my journey in software development.</p>
-          <a href="https://github.com/PLP-WebTechnologies/introduction-to-html-AKHATI98" target="_blank"
+          <a href="https://github.com/graceakhati-dev/graceakhati-portfolio-website.git" target="_blank"
             class="project-link">🔗 View on GitHub</a>
         </div>
       </div>
