--- a/blog2.html
+++ b/blog2.html
@@ -16,7 +16,7 @@
   <main>
     <p>When I first began learning how to code, I never imagined it would feel so… familiar.</p>
 
-    <p>I come from a world of yarn and hooks, where silence is filled with the soft rhythm of stitching — loop by loop, knot by knot. Crochet was my escape, my comfort, and eventually, my voice. It was the art form that saved me during one of the most painful seasons of my life — after I lost my grandmother, who had raised me after I was adopted and orphaned. She taught me how to crochet, and in many ways, she taught me how to create beauty from brokenness.</p>
+    <p>I come from a world of yarn and hooks, where silence is filled with the soft rhythm of stitching — loop by loop, knot by knot. Crochet was my escape, my comfort, and eventually, my voice. It was the art form that saved me during one of the most painful seasons of my life  and in many ways, I learnt how to create beauty from brokenness.</p>
 
     <p>Now, sitting at my desk, staring at lines of Python code, I’m realizing something:</p>
 
